--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                              <p>Kaunas</p>
                              
 							               <h5>LinkedIn profilis</h5>
-							               <p>www.linkedin.com/in/daniel-stac</p>
+							               <a href="www.linkedin.com/in/daniel-stac">Daniel Stac</a>
                              <i class="material-icons float-left">attach_file</i>
                              <h3 class="text-right border-top">Įgūdžiai ir patirtis</h3>
                              <ul>
