--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
 
                              <h5>Gyvenamoji vieta</h5>
                              <p>Kaunas</p>
-                             
-							               <h5>LinkedIn profilis</h5>
-							               <a href="www.linkedin.com/in/daniel-stac">Daniel Stac</a>
+				 
+			     <p><a href="www.linkedin.com/in/daniel-stac"></a>LinkedIn</p>
                              <i class="material-icons float-left">attach_file</i>
                              <h3 class="text-right border-top">Įgūdžiai ir patirtis</h3>
                              <ul>
@@ -120,7 +119,7 @@
 
                              <h6 class="border-top"><b>Industrinių Technologijų Vadyba / Kauno Technologijų Universitetas</b></h6>
                              <p class="mb-0"><strong>2012 - 2017</strong></p>
-                             <p class="mt-0">Bakalauro diplomas </p>
+                             <p class="mt-0">Bakalauro diplomas</p>
                          </div>
                      </div>
                      <div class="row">
